@@ -48,7 +48,7 @@ setUp() {
 	echo "DEBUG=\"true\"" >> "$MSM_CONF"
 	echo "DEFAULT_USERNAME=\"${USERNAME}\"" >> "$MSM_CONF"
 	echo "DEFAULT_SCREEN_NAME=\"msmtest-${SERVER_NAME}\"" >> "$MSM_CONF"
-	echo "DEFAULT_INVOCATION=\"java -Xmx${TEST_RAM}M -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalPacing -XX:+AggressiveOpts -jar {JAR} nogui\"" >> "$MSM_CONF"
+	echo "DEFAULT_INVOCATION=\"java -Xmx${TEST_RAM}M -jar {JAR} nogui\"" >> "$MSM_CONF"
 
 	source $TEST_SCRIPT
 	
